--- a/formsystemofnonlinearequations.ui
+++ b/formsystemofnonlinearequations.ui
@@ -116,7 +116,11 @@
       </widget>
      </item>
      <item row="3" column="1">
-      <widget class="QTextEdit" name="textEditIterProcess"/>
+      <widget class="QTextEdit" name="textEditIterProcess">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
      <item row="4" column="0">
       <layout class="QFormLayout" name="formLayout_4">
