--- a/formpartialderivatives.ui
+++ b/formpartialderivatives.ui
@@ -100,7 +100,7 @@
      <item row="1" column="1">
       <widget class="QPushButton" name="pushButtonClose">
        <property name="text">
-        <string>Выйти</string>
+        <string>Закрыть</string>
        </property>
       </widget>
      </item>
