--- a/formsystemofnonlinearequations.ui
+++ b/formsystemofnonlinearequations.ui
@@ -166,7 +166,7 @@
      <item row="5" column="1">
       <widget class="QPushButton" name="pushButtonClose">
        <property name="text">
-        <string>Выйти</string>
+        <string>Закрыть</string>
        </property>
       </widget>
      </item>
