--- a/formtabldiff.ui
+++ b/formtabldiff.ui
@@ -188,7 +188,7 @@
      <item row="1" column="1">
       <widget class="QPushButton" name="pushButtonClose">
        <property name="text">
-        <string>Выйти</string>
+        <string>Закрыть</string>
        </property>
       </widget>
      </item>
