--- a/formtablintegral.ui
+++ b/formtablintegral.ui
@@ -211,7 +211,7 @@
        <item row="3" column="1">
         <widget class="QPushButton" name="pushButtonClose">
          <property name="text">
-          <string>Выйти</string>
+          <string>Закрыть</string>
          </property>
         </widget>
        </item>
